[gd_scene load_steps=4 format=3 uid="uid://q4yruef2w63u"]

[ext_resource type="Script" path="res://scenes/menu.gd" id="1_3k6jv"]
[ext_resource type="PackedScene" uid="uid://d0lqwgqc48jab" path="res://scenes/button.tscn" id="1_7hn4n"]
[ext_resource type="FontFile" uid="uid://gmlu7cnhpb5e" path="res://assets/fonts/Pixellari.ttf" id="5_nwrlr"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3k6jv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.201527, 0.201527, 0.201527, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="TitleContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 32
theme_override_constants/margin_bottom = 32

[node name="Title" type="Label" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_nwrlr")
theme_override_font_sizes/font_size = 64
text = "Chest Choose"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_nwrlr")
text = "Name: "

[node name="NameLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_nwrlr")

[node name="HostButton" parent="VBoxContainer" instance=ExtResource("1_7hn4n")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
label = "Host"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8

[node name="Address" type="LineEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_nwrlr")
text = "127.0.0.1"

[node name="_" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = ":"

[node name="Port" type="LineEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_nwrlr")
text = "3000"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="JoinButton" parent="VBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("1_7hn4n")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
label = "Join"

[node name="StartButton" parent="VBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("1_7hn4n")]
unique_name_in_owner = true
layout_mode = 2
label = "Play"

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/NameLineEdit" to="." method="_on_name_line_edit_text_changed"]
[connection signal="button_up" from="VBoxContainer/HostButton" to="." method="_on_host_button_button_up"]
[connection signal="button_up" from="VBoxContainer/VBoxContainer/HBoxContainer2/JoinButton" to="." method="_on_join_button_button_up"]
[connection signal="button_up" from="VBoxContainer/VBoxContainer/HBoxContainer2/StartButton" to="." method="_on_start_button_button_up"]
